--- a/test.html
+++ b/test.html
@@ -1,23 +1,9 @@
-<<<<<<< HEAD
 <html>
 <head>
 	<title></title>
 </head>
 <body>
-asdasdasd
-</body>
-</html>
-=======
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Hello World 2014</title>
-</head>
+ubaaaaahhh
 
-<body>
-<p>Hello World</p>
-<p>Test</p>
 </body>
 </html>
->>>>>>> d0fda1712ba02ca8c4f5e9f276a5b2701126ef21
